--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script language="javascript" type="text/javascript" src="House.js"></script>
   <script language="javascript" type="text/javascript" src="Bullet.js"></script>
   <script language="javascript" type="text/javascript" src="Enemy.js"></script>
+  <script language="javascript" type="text/javascript" src="Obstacle.js"></script>
 
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
